# Chatbot-with-LangChain-and-LLM-Integration

./: .gitignore  =0.0.30  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
config/: logging_config.yaml
docs/: api.md  setup.md
scripts/: start_app.sh
src/: app.py  config.py
src/chatbot/: langchain_core.py  llm_integration.py  query_processor.py
src/data_ingestion/: excel_reader.py  vector_store.py
src/interface/: api.py
src/state/: global_state.py
src/static/: script.js  style.css
src/templates/: index.html
src/utils/: helpers.py  logger.py
